<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.example.batool.translator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/input_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="2dp"
                android:padding="16dp"
                android:background="@color/white"
                android:text="@string/english"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/swap_langs_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:padding="12dp"
                android:src="@drawable/ic_swap" />

            <TextView
                android:id="@+id/output_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="2dp"
                android:padding="16dp"
                android:background="@color/white"
                android:text="@string/french"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="2dp"
                android:paddingLeft="14dp"
                android:paddingTop="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="8dp"
                android:text="@string/english"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/white"
                android:hint="@string/tap_to_enter_text"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/translation_output_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/output_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="2dp"
                android:paddingLeft="14dp"
                android:paddingTop="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="8dp"
                android:text="@string/french"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/output_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/yandex_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/yandex_copyrights"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14dp"
            android:visibility="gone" />

        <!-- Empty view is only visible when there is no result -->
        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_depressed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/no_connection"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/check_your_connection"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
